--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <!-- AUDIO PLAYER -->
 
-#    <script type="text/javascript" src="/audio-player.js"></script>  
+<!-- #    <script type="text/javascript" src="/audio-player.js"></script>  
 #         <script type="text/javascript">  
 #             AudioPlayer.setup("http://doghousenyc.com/audio-player/player.swf", {  
 #                 width: 100  
 #             });  
-#         </script>  
+#         </script>   -->
 
 </head>
 
