--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>The Doghouse NYC - The Doghouse NYC Studios</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<style type="text/css" media="screen">@import url(/style/screen.css);</style>
-<style type="text/css" media="print">@import url(/style/print.css);</style>
+<!-- <style type="text/css" media="screen">@import url(/style/screen.css);</style>
+<style type="text/css" media="print">@import url(/style/print.css);</style> -->
 
 <link rel="Shortcut Icon" href="../favicon.ico" type="image/x-icon"/>
 <meta name="author" content="Nathan Rosenberg"/>
