--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div id="mainnav">
      -->
-    
+<!--     
     
   <ul id="menu">
     <li id="artmenu"><a href="/articles.php" title="Musings from The Doghouse NYC Studios" accesskey="2">Articles</a></li>
@@ -43,12 +43,12 @@
     <li id="biomenu"><a href="/bio.php" title="Who we are" accesskey="5">Biography</a></li>
     <li id="conmenu"><a href="/contact.php" title="Get in touch" accesskey="6">Contact</a></li>
   </ul>
-  </div>
+  </div> -->
 
 
 <!--begin main column-->
 
-
+<!-- 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -57,7 +57,7 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
+ -->
 <div id="main">
 
 <h1><a href="index.php" title="The Doghouse NYC">Recording, production, composition, and information from producer/pianist, Nathan Rosenberg's secret music workshop.</a></h1>
