--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<title>The Doghouse NYC - The Doghouse NYC Studios</title>
+<title>The Studios</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 <!-- <style type="text/css" media="print">@import url(/style/print.css);</style> 
  -->
 <link rel="Shortcut Icon" href="../favicon.ico" type="image/x-icon"/>
 <meta name="author" content="Nathan Rosenberg"/>
 <meta name="copyright" content="Copyright (c) 2005 Nathan Rosenberg"/>
-<meta name="description" content="composing, music, recording, producing. Nathan Rosenberg's Doghouse NYC studio since 1995. Read about Nathan and the facility here."/>
-<meta name="keywords" content="doghouse nyc, music, piano, vocal, jazz, production, recording, nathan rosenberg, composer, studio, producing, brooklyn"/>
+<meta name="description" content="Nathan Rosenberg's studio. Read about Nathan and the facility here."/>
+<meta name="keywords" content="music, piano, production"/>
 
 
 </head>
@@ -27,26 +28,6 @@
 
 
 
-
-
-<!-- end main column-->
-</div>
-
-
-<!--begin sidebar-->
-
-
-
-
-<!-- end sidebar-->
-</div>
-
-<div id="footnote"><p class="foot">Copyright &copy; 2005 The Doghouse NYC | <a href=mailto:contact@doghousenyc.com>contact</a> | (646)450-1076 | <a href="doghousenyc.xml" title=" XML">XML</a> |  </a>Design by <a href="http://www.quixoticnyc.com" title="Design/Film" target="_blank">Quixotic</a> | <a href="http://files.doghouseNYC.com" title="client area">Client LOGIN</a></p></div>
-
-
-
-
-<!-- end frame -->
 </div>
 
 
