--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+
+
+<style type="text/css" media="print">@import url(/style/print.css);</style> 
+
+
 <title>The Studios</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<!-- <style type="text/css" media="print">@import url(/style/print.css);</style> 
- -->
+
+
+
 <link rel="Shortcut Icon" href="../favicon.ico" type="image/x-icon"/>
 <meta name="author" content="Nathan Rosenberg"/>
 <meta name="copyright" content="Copyright (c) 2005 Nathan Rosenberg"/>
