--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css" media="print">@import url(/style/print.css);</style> 
 
 
-<title>The Studios</title>
+<title>The Studio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
 
