--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 
-<style type="text/css" media="print">@import url(/style/print.css);</style> 
+<style type="text/css" media="print">@import url(/style/screen.css);</style> 
 
 
 <title>The Studio</title>
