--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
 
 
-<style type="text/css" media="print">@import url(/style/screen.css);</style> 
-
+<style type="text/css" media="screen">@import url(/style/screen.css);</style>
 
 <title>Studio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
