--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style type="text/css" media="screen">@import url(/style/screen.css);</style>
 
-<title>Studio</title>
+<title>02 Studio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
 
