--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-<h1><a href="index.php" title="The Doghouse NYC">Recording, production, composition, and information from producer/pianist, Nathan Rosenberg's secret music workshop.</a></h1>
+<h1><a href="index.php" title="The Doghouse NYC">Home LINK</a></h1>
 
 
 <p class="tag">mastering</p>
