Update css and add photo

--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+
+<!-- this a secert message to myself -->
+
+<!-- this is the header -->
 
 <head>
 
+<!-- css stylesheet (in the /style folder) -->
 
-<style type="text/css" media="screen">@import url(/style/screen.css);</style>
+<link rel="stylesheet" href="style/myStyle.css">
 
-<title>03 Studio</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-
-
-
-<link rel="Shortcut Icon" href="../favicon.ico" type="image/x-icon"/>
-<meta name="author" content="Nathan Rosenberg"/>
-<meta name="copyright" content="Copyright (c) 2005 Nathan Rosenberg"/>
-<meta name="description" content="Nathan Rosenberg's studio. Read about Nathan and the facility here."/>
-<meta name="keywords" content="music, piano, production"/>
-
+<!-- title at the top of browser window -->
+<title>My Website</title>
 
 </head>
 
+<!-- beginning of webpage text -->
+<h1>Heading ONE</h1>
+<h2>Heading TWO!</h2>
+
+<p>This is a paragraph of text.</p>
+
+<!-- a special box called "mySection" -->
+<p class="myFirstSection">
+I made this special box using the "mySection" class in the CSS file.</p>
+
+<div id="myBackgroundImageSection">
+	
+<p>this is the beginning of the background image section.</p>
+
+<p>The picture will be placed underneath this text for as long as the section continues.</p>
 
 
-
-<h1><a href="index.php" title="The Doghouse NYC">Home LINK</a></h1>
-
-
-<p class="tag">mastering</p>
-
-<p>Our mix environment doubles as a pre-mastering/mastering suite. Our custom Ed Long mains reveal details that other systems can't reproduce.</p>
-
+</div>
 
