Uploaded HTML demo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
 <p>This is a paragraph of text.</p>
 
+
+This is the <a href= "page2.html">way you make a link</a>. Anything inside of the tags is the link. 
+
+<p>It can say <a href="page2">AnYtHiNg yO</a>u want. </p>
+
+
+
 <!-- a special box called "mySection" -->
 <p class="myFirstSection">
 I made this special box using the "mySection" class in the CSS file.</p>
@@ -32,4 +39,7 @@ I made this special box using the "mySection" class in the CSS file.</p>
 
 
 </div>
+
+<h1>Ready to embed video?</h1>
+watch <a href="embed.html">THIS</a>!
 
